...
        )
      }

      if (localPath) {
        return (
          <GestureDetector gesture={composed}>
            <View style={pdfStyle} testID="sheet_music_loaded">
              <PdfRendererView
                source={localPath}
                onError={() => console.log('PDF render error')}
                maxZoom={2.0}
                distanceBetweenPages={16}
                style={styles.pdfRenderer}
...
