...
  }

  const navigationActions = useMemo(
    () => [
      {
        icon: 'arrow-up',
        testID: 'tag_prev',
        onPress: () => selectPrevTag(),
        disabled: () => !selectedTag || selectedTag.index <= 0,
      },
      {
        icon: 'arrow-down',
        testID: 'tag_next',
        onPress: () => selectNextTag(),
        disabled: () => !selectedTag || selectedTag.index >= allTagIds.length - 1,
      },
    ],
    // eslint-disable-next-line react-hooks/exhaustive-deps
    [selectedTag, allTagIds.length],
...
