...
import searchReducer from './modules/searchSlice'
import tracksReducer from './modules/tracksSlice'
import visitReducer from './modules/visitSlice'

const rootReducer = combineReducers({
  search: searchReducer,
  popular: popularReducer,
  classic: classicReducer,
  easy: easyReducer,
  new: newReducer,
  visit: visitReducer,
  favorites: favoritesReducer,
  history: historyReducer,
...
