...
        <Tab.Screen
          name="HomeNavigator"
          component={HomeNavigator}
          options={{
            title: 'home',
            tabBarIcon: HomeIcon,
            tabBarAccessibilityLabel: 'tab_home',
          }}
        />
        <Tab.Screen
          name="Search"
          component={SearchScreen}
          options={{
...
        <Tab.Screen
          name="Favorites"
          component={FavoritesScreen}
          options={{
            title: 'faves',
            tabBarIcon: FavoritesIcon,
            tabBarAccessibilityLabel: 'tab_faves',
          }}
        />
        <Tab.Screen
          name="History"
          component={HistoryScreen}
          options={{
...
