...
  [SortOrder.id]: 'sort-numeric-ascending',
}

export const SORT_LABELS = {
  [SortOrder.alpha]: 'sort alphabetically',
  [SortOrder.downloads]: 'sort by downloads',
  [SortOrder.newest]: 'sort by newest',
  [SortOrder.id]: 'sort by id',
}

export type TagListState = {
  allTagIds: number[] // array of tag ids
  error?: string
  loadingState: LoadingState
...
