...
import { useCallback, useLayoutEffect, useRef, useState } from 'react'
import { Pressable, ScrollView, StyleSheet, View } from 'react-native'
import { Button, Divider, IconButton, List, useTheme } from 'react-native-paper'
import { useSafeAreaInsets } from 'react-native-safe-area-context'

function LabelsMenuButton({ color, onPress }: { color: string; onPress: () => void }) {
  return <IconButton icon="menu" iconColor={color} size={22} onPress={onPress} testID="menu" />
}

/**
 * List of labels for navigating to labeled tags
 */
export default function LabelsScreen({ navigation }: HomeNavigatorScreenProps<'Labels'>) {
...

  const fabActions = [
    {
      icon: 'broom',
      label: 'remove all labels',
      onPress: () => confirmSheetRef.current?.present(),
      testID: 'remove-all',
    },
  ]

  const styles = StyleSheet.create({
    container: {
      flex: 1,
...
